--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
 svg {
-  margin-top: 5rem;
-  align-items: center;
   height:300px;
-  width: 450px;
   background-color: lightgrey;
   overflow: visible;
+  margin-bottom: 1rem;
 }
 
 #root {
   align-items: center;
   display: flex;
   flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+}
+
+button {
+  margin-bottom: 1rem;
+  width: 8rem;
+  background: white;
 }
